--- a/python/packages/agbench/benchmarks/HumanEval/config.yaml
+++ b/python/packages/agbench/benchmarks/HumanEval/config.yaml
@@ -1,16 +1,16 @@
-# config.yaml
-#
-# The contents of this file will be copied into the 'config.yaml' file of
-# every expanded Task, just prior to running the scenario. This provides a
-# good place to store model or other configurations important for the scenario.
+# # config.yaml
+# #
+# # The contents of this file will be copied into the 'config.yaml' file of
+# # every expanded Task, just prior to running the scenario. This provides a
+# # good place to store model or other configurations important for the scenario.
 
-###############################
-# Open AI model configuration #
-###############################
-model_config:
-  provider: autogen_ext.models.openai.OpenAIChatCompletionClient
-  config:
-    model: gpt-4o
+# ###############################
+# # Open AI model configuration #
+# ###############################
+# model_config:
+#   provider: autogen_ext.models.openai.OpenAIChatCompletionClient
+#   config:
+#     model: gpt-4o
 
 
 ##############################
@@ -27,3 +27,37 @@ model_config:
 #        json_output: false
 #        vision: false
 #        family: r1
+
+
+#############################
+# vllm model configuration #
+#############################
+model_config:
+   provider: autogen_ext.models.openai.OpenAIChatCompletionClient
+   config:
+     model: openai/gpt-oss-120b
+     base_url: http://localhost:8000/v1/
+     api_key: vllm
+     model_info:
+       function_calling: true
+       json_output: true
+       vision: false
+       family: oss
+       structured_output: true
+
+
+# #############################
+# # vllm model configuration #
+# #############################
+# model_config:
+#    provider: autogen_ext.models.openai.OpenAIChatCompletionClient
+#    config:
+#      model: meta-llama/Llama-4-Scout-17B-16E-Instruct
+#      base_url: http://localhost:8000/v1/
+#      api_key: vllm
+#      model_info:
+#        function_calling: true
+#        json_output: true
+#        vision: true
+#        family: llama
+#        structured_output: true
